# otasmusic

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENCE  README.md  build-image.sh  compose.dev.yml  compose.yml  db-dump.sh  db-restore.sh  docker-compose.yml  init.sh  nginx.conf
backend/: .env.template  init-local.sh  pyproject.toml
backend/config/: settings.py  urls.py  wsgi.py
backend/locale/cs/LC_MESSAGES/: django.mo  django.po
backend/otasmusic/: admin.py  apps.py  models.py  views.py
backend/otasmusic/forms/: UserSignUpForm.py
backend/otasmusic/migrations/: 0001_initial.py  0002_auto_20180719_1222.py  0003_auto_20180728_0843.py  0004_auto_20180728_1504.py  0005_remove_record_description.py  0006_auto_20190929_1300.py  0007_auto_20200114_1701.py  0008_auto_20200304_2148.py
backend/otasmusic/static/components/: jquery.mobilemenu-otas.js
backend/otasmusic/templates/: calendar-iframe.html  contact.html  event_band_gig_time.html  lang_selector.html  lyrics.html  map-iframe.html  next_prev_btn.html  player.html  record.html  records.html  services.html  song_header.html
backend/otasmusic/templates/layout/: content.html  head-contents.html  index.html
backend/otasmusic/templates/links/: album_link.html  band_link.html  event_link.html  person_link.html  record_link.html  song_link.html
backend/otasmusic/templates/registration/: login.html  logout.html  user_sign_up_form.html
backend/otasmusic/templates/views/: album_view.html  (+12 more)
backend/otasmusic/templatetags/: filter_url.py  record_helper.py
backend/otasmusic/util/: source.py
(+11 files in other folders)
